# CLessons

./: .gitignore  Readme.md
GeekBrains/: Readme.md
GeekBrains/DataStructures/: CMakeLists.txt  Lesson01.c  Lesson02.c  Lesson03.c  Lesson04.c  Lesson05.c  Lesson06.c  Lesson07.c  SpiralMatrix.c  Temp.c
GeekBrains/DataStructures/database/: data.txt  matrix.csv  matrix.txt
GeekBrains/FundamentalsC/CppMatrix/: CMakeLists.txt  main.cpp
GeekBrains/FundamentalsC/Lesson01/: CMakeLists.txt
GeekBrains/FundamentalsC/Lesson01/Src/: Lesson01.c
GeekBrains/FundamentalsC/Lesson02/: CMakeLists.txt
GeekBrains/FundamentalsC/Lesson02/Src/: Lesson02.c
GeekBrains/FundamentalsC/Lesson03/: CMakeLists.txt
GeekBrains/FundamentalsC/Lesson03/Src/: Lesson03.c
GeekBrains/FundamentalsC/Lesson04/: CMakeLists.txt
GeekBrains/FundamentalsC/Lesson04/src/: Cycles.c
GeekBrains/FundamentalsC/Lesson05/: CMakeLists.txt
GeekBrains/FundamentalsC/Lesson05/src/: Cycles02.c  Cycles03.c
