cmake_minimum_required(VERSION 3.9)
project(DataStructures)

set(CMAKE_CXX_STANDARD 11)

add_executable(Lesson01 Lesson01.c)
add_executable(Lesson02 Lesson02.c)
add_executable(Lesson03 Lesson03.c)
add_executable(Lesson04 Lesson04.c)
add_executable(Lesson05 Lesson05.c)
add_executable(Lesson06 Lesson06.c)
add_executable(Temp Temp.c)
add_executable(SpiralMatrix SpiralMatrix.c)